# crabchat

./: .env  Cargo.toml  README.md  docker-compose.yml  prometheus.yml
client/: Cargo.toml
client/src/: lib.rs  main.rs
client_server_tests/: Cargo.toml
client_server_tests/src/: main.rs
client_server_tests/tests/: integration_test.rs
server/: Cargo.toml
server/migrations/: 20250328203435_initial_schema.sql
server/src/: admin.rs  lib.rs  main.rs
src/: lib.rs  main.rs
utils/: Cargo.toml
utils/src/: errors.rs  lib.rs
