#[package]
#name = "crabchat"
#version = "0.2.0"
#edition = "2024"

[workspace]
members = [
    "client",
    "server",
    "utils",
]
# default resolver for 2024
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0.218", features = ["derive"] }
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
