[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { version = "0.1.0", path = "../utils" }
serde = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
axum = "0.8.3"
